Fix header spacing

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,9 +1,9 @@
 .IntroSection {
-  /* z-index: 101; */
-  /* height: 80vh; */
-  /* max-height: 50rem; */
-  /* min-height: 32rem; */
-  padding: 4rem 2rem 5rem 2rem;
+  padding: 4rem 4rem 5rem 0;
+
+  @media screen and (max-width: 40rem) {
+    padding: 4rem 0 5rem 0;
+  }
 }
 
 .ProjectItem {
